--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      HEROKU_DATABASE_URL: ${{ secrets.HEROKU_DATABASE_URL }}
 
     steps:
       - name: Checkout code
@@ -22,6 +24,6 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-
+      
       - name: Run tests with coverage
         run: pytest
