--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,13 @@ jobs:
       HEROKU_DATABASE_URL: ${{ secrets.HEROKU_DATABASE_URL }}
 
     steps:
+      - name: Check for database URL
+        run: |
+          if [ -z "$HEROKU_DATABASE_URL" ]; then
+            echo "HEROKU_DATABASE_URL environment variable is not set."
+            exit 1
+          fi
+    
       - name: Checkout code
         uses: actions/checkout@v2
 
